--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="col-md">
-            <img src="fundamentals.svg" class="img-fluid" alt="" />
+            <img src="xray02.jpg" class="img-fluid" alt="" />
           </div>
           <div class="col-md p-5">
             <h2>What to Expect from the Appointment</h2>
