--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
               data-bs-parent="#questions"
             >
               <div class="accordion-body">
-                Your Technician today is Chirag Gutpa, a Radiology Student at
-                Dallas College will be completing my R.T.(R)(ARRT) in January
-                2025.
+                Your Technnologist today is Chirag Gupta, a Radiology Student at
+                Dallas College, who will be supervised by an experienced ARRT certified Radiologic Technologist. 
               </div>
             </div>
           </div>
